--- a/form.html
+++ b/form.html
@@ -44,7 +44,7 @@
         </div>
         <div class="form-group">
             <label for="dbname">Db Name</label>
-            <input name="dbname"  type="text" class="form-control" id="dbname" placeholder="production_dont_touch" value="pocofull0810">
+            <input name="dbname"  type="text" class="form-control" id="dbname" placeholder="production_dont_touch" value="dbName">
         </div>
         <div class="form-group">
             <label for="port">port</label>
